fix btns dark mode + primary/secondary in opds

--- a/src/renderer/assets/styles/partials/variables.scss
+++ b/src/renderer/assets/styles/partials/variables.scss
@@ -17,7 +17,7 @@ $color-palette: (
     --color-accent-contrast: #fff,
     --reader-fontColor: #000,
     --color-button-primary: rgba(16, 83, 200, 1),
-    --color-button-secondary: rgba(16, 83, 200, 0.05),
+    --color-button-secondary: rgba(245,247,253,255),
     --color-bg-tab: rgba(246, 246, 246, 0.84),
     --setting-btn-primary: #3a00e5,
     --setting-btn-secondary: #f7f5ff,
@@ -33,7 +33,7 @@ $color-palette: (
     --color-accent-contrast: #fff,
     --reader-fontColor: #fff,
     --color-button-primary: rgba(16, 83, 200, 1),
-    --color-button-secondary: rgba(16, 83, 200, 0.05),
+    --color-button-secondary: rgba(245,247,253,255),
     --color-bg-tab: rgba(16, 18, 22, 0.6),
     --setting-btn-primary: #fff,
     --setting-btn-secondary: var(--color-secondary),
